--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="bg-gray-200 text-white">
   <header class="bg-gray-800 p-4 shadow-lg">
-    <h1 class="text-4xl font-bold text-center fade-in">Welcome to My Portfolio</h1>
+    <h1 class="text-4xl font-bold text-center fade-in">Sayan Basani</h1>
   </header>
   <main class="container mx-auto p-4">
     <section class="my-8 fade-in">
