--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  class="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-
+  <!-- <script src="script.js"></script> -->
   <style>
     .background-image {
       background-image: url('img.png');
@@ -20,28 +20,42 @@
       color: white;
       text-align: center;
     }
+    @media screen and (max-width: 640px) {
+      .max-sm\:mx-0 {
+        margin-left: 0rem;
+        margin-right: 0rem;
+      }
+      
+    }
+    .dark {
+      background-color: black;
+      color: white;
+    }
+    .dark_button {
+      /* background-color: white; */
+      /* color: black; */
+    }
   </style>
 </head>
 
-<body class="bg-black ">
-  <button class="text-white border-2 border-white p-2 rounded-lg absolute top-2 left-2">
-    <i class="bi bi-moon-stars"></i>
-    <!-- <i class="bi bi-brightness-high-fill"></i>   -->
-  </button>
-  <button class="text-white border-2 border-white p-2 rounded-lg absolute top-2 right-2">
-    <i class="bi bi-list"></i>
-  </button>
+<body>
+  <div>
+    <button onclick="toggleDarkMode()" class="f_buttons border-white p-2 rounded-full absolute bottom-2 left-2">
+      <i class="bi bi-moon-stars-fill"></i>
+      <!-- <i class="bi bi-brightness-high-fill"></i>   -->
+    </button>
+    <button class="border-white p-2 rounded-lg absolute top-2 right-2">
+      <i class="bi bi-list"></i>
+    </button>
+  </div>
 
   <div class="h-screen w-screen grid gap-5">
-    <main class="bg-gray-900 text-white p-10 rounded-lg">
-
-
-      <div class="background-image border-2 border-white bg-transparent mb-20 mt-5 p-5 rounded-lg">
-        <!-- <img class="overflow-hidden w-full h-40 z-0" src="./img.png" alt=""> -->
-        <div class="flex justify-center items-center overflow-hidden border-2 border-white rounded-full -mb-20 mx-auto w-40 h-40">
+    <main class="p-10 rounded-lg">
+      <!-- sm:bg-red-900 md:bg-blue-700 lg:bg-yellow-900 -->
+      <div class="background-image max-sm:mx-0 mx-10 mb-20 mt-5 p-5 rounded-lg">
+        <div class="flex justify-center items-center overflow-hidden  rounded-full -mb-20 mx-auto w-40 h-40">
           <img src="sayan.jpg" alt="">
         </div>
-        
       </div>
 
       <div>
@@ -56,3 +70,30 @@
 </body>
 
 </html>
+
+<script>
+  function toggleDarkMode() {
+    const htmlElement = document.documentElement;
+    const buttons = document.querySelectorAll('.f_buttons');
+
+    htmlElement.classList.toggle('dark');
+    buttons.forEach(button => {
+      const icon = button.querySelector('i');
+      if (htmlElement.classList.contains('dark')) {
+        localStorage.setItem('dark-mode', 'enabled');
+        button.classList.add('dark_button');
+        if (icon.classList.contains('bi-moon-stars-fill')) {
+          icon.classList.remove('bi-moon-stars-fill');
+          icon.classList.add('bi-brightness-high-fill');
+        }
+      } else {
+        localStorage.setItem('dark-mode', 'disabled');
+        button.classList.remove('dark_button');
+        if (icon.classList.contains('bi-brightness-high-fill')) {
+          icon.classList.remove('bi-brightness-high-fill');
+          icon.classList.add('bi-moon-stars-fill');
+        }
+      }
+    });
+  }
+</script>
