--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
   <style>
     .background-image {
       background-image: url('img.png');
@@ -25,16 +25,19 @@
         margin-left: 0rem;
         margin-right: 0rem;
       }
+      .max-text-3xl {
+        font-size: 1.875rem;
+      }
+      .max-text-xl {
+        font-size: .875rem;
+      }
       
     }
     .dark {
       background-color: black;
       color: white;
     }
-    .dark_button {
-      /* background-color: white; */
-      /* color: black; */
-    }
+    
   </style>
 </head>
 
@@ -58,11 +61,26 @@
         </div>
       </div>
 
-      <div>
-        hello
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse magni ducimus, ipsam qui vel neque pariatur
-        molestias quidem a eius deleniti debitis doloremque iure et enim tempora voluptate facilis. Reprehenderit?
+      <div class="text-center grid gap-4">
+        <h2 class="max-text-3xl text-5xl font-bold">
+          Sayan Basani
+        </h2>
+        <div class="max-text-xl text-xl grid gap-2">
+          <span class="whitespace-nowrap">
+            Full Stack Developer | Web Developer | Programmer
+          </span>
+          <span class="">
+            Email :
+            <a href="mailto:sayan.basani2004@gmail.com" class="text-blue-500 underline">
+              sayan.basani2004@gmail.com
+            </a>
+          </span>
+          <span class="">
+            Address : Akrasal, Bankura, West Bengal
+          </span>
+        </div>
       </div>
+      <div class="About-Me border-white border-2">hello</div>
     </main>
 
 
@@ -71,29 +89,3 @@
 
 </html>
 
-<script>
-  function toggleDarkMode() {
-    const htmlElement = document.documentElement;
-    const buttons = document.querySelectorAll('.f_buttons');
-
-    htmlElement.classList.toggle('dark');
-    buttons.forEach(button => {
-      const icon = button.querySelector('i');
-      if (htmlElement.classList.contains('dark')) {
-        localStorage.setItem('dark-mode', 'enabled');
-        button.classList.add('dark_button');
-        if (icon.classList.contains('bi-moon-stars-fill')) {
-          icon.classList.remove('bi-moon-stars-fill');
-          icon.classList.add('bi-brightness-high-fill');
-        }
-      } else {
-        localStorage.setItem('dark-mode', 'disabled');
-        button.classList.remove('dark_button');
-        if (icon.classList.contains('bi-brightness-high-fill')) {
-          icon.classList.remove('bi-brightness-high-fill');
-          icon.classList.add('bi-moon-stars-fill');
-        }
-      }
-    });
-  }
-</script>
